k8s/base/thehive/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thehive
  namespace: thehive
  labels:
    app.kubernetes.io/name: thehive
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: thehive
    app.kubernetes.io/component: soar
  ports:
    - name: http
      port: 9000
      targetPort: http
