k8s/base/thehive/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thehive
  namespace: thehive
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thehive
                port:
                  number: 9000
