k8s/base/thehive/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: thehive
  namespace: thehive
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: thehive
      app.kubernetes.io/component: soar
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: cassandra
      ports:
        - protocol: TCP
          port: 9042
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: elasticsearch
      ports:
        - protocol: TCP
          port: 9200
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
